--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-TW">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡單計算機</title>
     <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
         .calculator {
             width: 300px;
             margin: 0 auto;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            padding: 10px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
         input[type="text"] {
             width: 100%;
-            font-size: 20px;
+            margin-bottom: 10px;
+            padding: 5px;
         }
         input[type="button"] {
-            width: 50px;
-            height: 50px;
-            font-size: 20px;
+            width: 70px;
+            height: 40px;
             margin: 5px;
+            font-size: 18px;
         }
     </style>
 </head>
 <body>
     <div class="calculator">
         <input type="text" id="display" readonly>
-        <br>
         <input type="button" value="1" onclick="appendToDisplay('1')">
         <input type="button" value="2" onclick="appendToDisplay('2')">
         <input type="button" value="3" onclick="appendToDisplay('3')">
@@ -43,7 +53,7 @@
         <input type="button" value="=" onclick="calculate()">
         <input type="button" value="/" onclick="appendToDisplay('/')">
     </div>
-    
+
     <script>
         function appendToDisplay(value) {
             document.getElementById('display').value += value;
