--- a/index.html
+++ b/index.html
@@ -1,61 +1,69 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡單計算機</title>
     <style>
         body {
-            text-align: center;
             font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        h1 {
+            color: #333;
         }
         .calculator {
             width: 300px;
             margin: 0 auto;
+            background-color: #f0f0f0;
             border: 1px solid #ccc;
-            border-radius: 5px;
             padding: 10px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
         }
         input[type="text"] {
             width: 100%;
-            margin-bottom: 10px;
-            padding: 5px;
+            padding: 10px;
+            margin: 5px 0;
         }
         input[type="button"] {
-            width: 70px;
-            height: 40px;
+            width: 45px;
+            height: 45px;
+            font-size: 20px;
             margin: 5px;
-            font-size: 18px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
+    <h1>簡單計算機</h1>
     <div class="calculator">
         <input type="text" id="display" readonly>
-        <input type="button" value="1" onclick="appendToDisplay('1')">
-        <input type="button" value="2" onclick="appendToDisplay('2')">
-        <input type="button" value="3" onclick="appendToDisplay('3')">
-        <input type="button" value="+" onclick="appendToDisplay('+')">
-        <br>
-        <input type="button" value="4" onclick="appendToDisplay('4')">
-        <input type="button" value="5" onclick="appendToDisplay('5')">
-        <input type="button" value="6" onclick="appendToDisplay('6')">
-        <input type="button" value="-" onclick="appendToDisplay('-')">
-        <br>
-        <input type="button" value="7" onclick="appendToDisplay('7')">
-        <input type="button" value="8" onclick="appendToDisplay('8')">
-        <input type="button" value="9" onclick="appendToDisplay('9')">
-        <input type="button" value="*" onclick="appendToDisplay('*')">
-        <br>
-        <input type="button" value="C" onclick="clearDisplay()">
-        <input type="button" value="0" onclick="appendToDisplay('0')">
-        <input type="button" value="=" onclick="calculate()">
-        <input type="button" value="/" onclick="appendToDisplay('/')">
+        <div>
+            <input type="button" value="1" onclick="addToDisplay('1')">
+            <input type="button" value="2" onclick="addToDisplay('2')">
+            <input type="button" value="3" onclick="addToDisplay('3')">
+            <input type="button" value="/" onclick="addToDisplay('/')">
+        </div>
+        <div>
+            <input type="button" value="4" onclick="addToDisplay('4')">
+            <input type="button" value="5" onclick="addToDisplay('5')">
+            <input type="button" value="6" onclick="addToDisplay('6')">
+            <input type="button" value="-" onclick="addToDisplay('-')">
+        </div>
+        <div>
+            <input type="button" value="7" onclick="addToDisplay('7')">
+            <input type="button" value="8" onclick="addToDisplay('8')">
+            <input type="button" value="9" onclick="addToDisplay('9')">
+            <input type="button" value="+" onclick="addToDisplay('+')">
+        </div>
+        <div>
+            <input type="button" value="C" onclick="clearDisplay()">
+            <input type="button" value="0" onclick="addToDisplay('0')">
+            <input type="button" value="=" onclick="calculate()">
+            <input type="button" value="*" onclick="addToDisplay('*')">
+        </div>
     </div>
-
     <script>
-        function appendToDisplay(value) {
+        function addToDisplay(value) {
             document.getElementById('display').value += value;
         }
 
